--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@riddance/service",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "type": "module",
   "license": "MIT",
   "engines": {
@@ -24,20 +24,27 @@
   ],
   "sideEffects": [
     "./context.js",
-    "./http.js"
+    "./http.js",
+    "./timer.js",
+    "./event.js"
   ],
   "exports": {
     "./context": "./context.js",
     "./http": "./http.js",
+    "./timer": "./timer.js",
+    "./event": "./event.js",
     "./test/context": "./mock/context.js",
-    "./test/http": "./mock/http.js"
+    "./test/http": "./mock/http.js",
+    "./test/timer": "./mock/timer.js",
+    "./test/event": "./mock/event.js"
   },
   "dependencies": {
-    "@riddance/host": "0.1.2",
-    "jose": "5.9.6"
+    "@riddance/host": "0.2.0",
+    "cron": "4.3.3",
+    "jose": "6.0.12"
   },
   "devDependencies": {
-    "@riddance/env": "0.6.4"
+    "@riddance/env": "0.8.2"
   },
   "scripts": {
     "start": "riddance-watch",
